# ASTra

./: .dockerignore  .env.example  .gitignore  AgentCard.json  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: __init__.py  __main__.py  code_analysis_agent.py  code_analysis_toolset.py  openai_agent_executor.py  tree_maker.py
