[project]
name = "omni-analyzer-agent"
version = "2.0.0"
description = "Unified AST-driven code review and SAST agent."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "a2a-sdk>=0.3.0",
    "click>=8.1.8",
    "openai>=1.57.0",
    "pydantic>=2.11.4",
    "python-dotenv>=1.1.0",
    "uvicorn>=0.34.2",
    "starlette>=0.41.3",
    "aiohttp>=3.9.0",
    "aiofiles>=23.2.1",
    "tree-sitter>=0.21.0",
    "tree-sitter-languages>=1.10.2",
    "tree-sitter-python>=0.21.0",
    "tree-sitter-cpp>=0.21.0",
    "tree-sitter-java>=0.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"